# Fluxation

./: .gitignore  SYNAPSE_IMPLEMENTATION_SUMMARY.md  readme.md
adaptiflux-core/: .gitignore  ARC_FIXES_SUMMARY_EN.md  Cargo.toml  LICENSE_COMMERCIAL.md  QUICK_REFERENCE.sh  README.md
adaptiflux-core/benches/: mnist_integration_bench.rs  optimizer_bench.rs  perf_regression.rs  scheduler_bench.rs  synapse_lookup_bench.rs
adaptiflux-core/docs/: APPLE_METAL_GPU.md  rules_and_consistency.md  synapse_lifecycle.md
adaptiflux-core/docs/migrationVER1.0.3/: ACCELERATOR_IMPLEMENTATION_SUMMARY-MACHINE.md  MIGRATION_GUIDE.md
adaptiflux-core/examples/: accelerator_architecture.rs  apple_metal_demo.rs  baseline.rs  custom_optim_pid.rs  gpu_intensive_demo.rs  integrated_demo.rs  mnist_training.rs  pid_control_loop.rs  profile_demo.rs  simple_sensor_net.rs  swarm_search_demo.rs  timing_test.rs
adaptiflux-core/examples/adaptiflux-parquet-examples/examples/mnist_full_experiment/: main.rs
adaptiflux-core/examples/adaptiflux-parquet-examples/examples/mnist_learning/: mnist_spiking_classifier.rs
adaptiflux-core/examples/attention_focused/: swarm_navigation.rs
adaptiflux-core/examples/evolving_flow/: ARCHITECTURE.md  README.md  baseline.rs  main.rs  run_production_tests.sh  run_tests.sh  test_runner.sh  ui.rs
adaptiflux-core/examples/hierarchical_scaling/: swarm_abstraction.rs
adaptiflux-core/examples/memory_guided/: control_optimization_with_history.rs
adaptiflux-core/examples/mnist_adaptiflux/: main.rs
adaptiflux-core/examples/mnist_full_experiment/: main.rs
adaptiflux-core/examples/mnist_learning/: data_loader.rs  evaluation.rs  mnist_spiking_classifier.rs  training_loop.rs
adaptiflux-core/examples/online_learning/: control_optimization.rs  custom_optim_pid.rs
adaptiflux-core/examples/self_org/: self_healing_network.rs  task_driven_architecture_growth.rs
adaptiflux-core/examples/use_cases/: adaptive_control.rs  distributed_search.rs  network_optimization.rs
adaptiflux-core/src/: lib.rs
adaptiflux-core/src/accelerator/: backend.rs  config.rs  cpu_backend.rs  factory.rs  gpu_backend.rs  mod.rs  pool.rs  shader_runner.rs
adaptiflux-core/src/agent/: mod.rs  state.rs  synapse_manager.rs  zoooid.rs
adaptiflux-core/src/agent/blueprint/: base.rs  cognitivezooid.rs  mod.rs  physarumzooid.rs  pidzooid.rs  sensorzooid.rs  swarmzooid.rs
adaptiflux-core/src/attention/: attention_integration.rs  attention_mechanism.rs  focus_scheduler.rs  mod.rs
adaptiflux-core/src/core/: mod.rs  resource_manager.rs  scheduler.rs  system_config.rs  topology_events.rs  zoooid_handle.rs
adaptiflux-core/src/core/message_bus/: bus.rs  message.rs  mod.rs
adaptiflux-core/src/core/topology/: cached_metrics.rs  mod.rs
adaptiflux-core/src/gpu/: buffer_manager.rs  config.rs  context.rs  izhikevich_compute.rs  mod.rs  primitive_wrappers.rs  resource_manager.rs  shader_runner.rs  shaders.rs  tests.rs
adaptiflux-core/src/hierarchy/: abstraction_layer.rs  aggregation_functions.rs  cluster_detection.rs  mod.rs
adaptiflux-core/src/hybrids/: cognitive_memory.rs  mod.rs  physarum_router.rs  sensor_processor_controller.rs  swarm_forager.rs
adaptiflux-core/src/learning/: batch_optimizer.rs  mod.rs  online_adaptation.rs  parameter_tuning.rs  signal_integration.rs
adaptiflux-core/src/memory/: indexer.rs  long_term_store.rs  memory_integration.rs  mod.rs  retriever.rs  scoring.rs  types.rs
adaptiflux-core/src/performance/: async_optimization.rs  mod.rs  resource_manager.rs  sparse_execution.rs
adaptiflux-core/src/plasticity/: apoptosis.rs  context.rs  mod.rs  neurogenesis.rs  pruning.rs  synaptogenesis.rs  topology_optimizer.rs
adaptiflux-core/src/power/: mod.rs  power_monitor.rs  sleep_scheduler.rs
adaptiflux-core/src/primitives/: base.rs  mod.rs
adaptiflux-core/src/primitives/control/: mod.rs  pid.rs
adaptiflux-core/src/primitives/physical/: mod.rs  physarum.rs
adaptiflux-core/src/primitives/spiking/: izhikevich.rs  lif.rs  mod.rs
adaptiflux-core/src/primitives/swarm/: mod.rs  pfsm.rs
adaptiflux-core/src/rules/: engine.rs  mod.rs  structural_plasticity.rs
adaptiflux-core/src/rules/behavior/: base.rs  examples.rs  mod.rs
adaptiflux-core/src/rules/consistency/: base.rs  checks.rs  mod.rs
adaptiflux-core/src/rules/topology/: base.rs  examples.rs  mod.rs
adaptiflux-core/src/utils/: helpers.rs  mod.rs  types.rs
adaptiflux-optim/: Cargo.toml  LICENSE  LICENSE_COMMERCIAL.md  README.md
adaptiflux-optim/examples/: optim_benchmark.rs
adaptiflux-optim/src/: accumulator.rs  lib.rs  optimizer.rs  simd_kernels.rs
adaptiflux-optim/src/algorithms/: adam.rs  hebbian_adaptive.rs  mod.rs  rmsprop.rs  sgd.rs
adaptiflux-optim/tests/: optimizer_tests.rs
adaptiflux-parquet-examples/: Cargo.toml
adaptiflux-parquet-examples/examples/mnist_full_experiment/: main.rs
adaptiflux-parquet-examples/examples/mnist_learning/: main.rs
custom_optim/: Cargo.toml  LICENSE  LICENSE_COMMERCIAL.md  README.md  build.rs
custom_optim/examples/: optimize_simple_function.rs
custom_optim/src/: lib.rs  optimizer.rs  strategy.rs  utils.rs
custom_optim/src/backend/: cpu.rs  mod.rs
custom_optim/src/backend/cuda/: cuda_strategy.rs  kernels.cu  kernels.rs  mod.rs
custom_optim/src/strategies/: hybrid.rs  mod.rs
custom_optim/tests/: unit_tests.rs
